# cobol-agent

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  baseline_inference.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
fixtures/core_batch/: claims_audit.cob  claims_audit.expected.json  inventory_update.cob  inventory_update.expected.json  payroll_report.cob  payroll_report.expected.json
openenv_envs/: __init__.py  _compat.py  compare_eval_env.py  extract_eval_env.py  fix_eval_env.py
server/: Dockerfile  __init__.py  app.py  cobol_modernization_environment.py
src/: __init__.py
src/agent/: __init__.py  config.py  mermaid.py  openai_client.py  pipeline.py  schemas.py  scoring.py  task_catalog.py
